--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1"
